# minchat

./: Cargo.toml  Rocket.toml
pages/: v1docs.html
src/: endpoints.rs  lib.rs  main.rs  message.rs  user.rs
src/rocket_anyhow/: Cargo.toml
src/rocket_anyhow/src/: lib.rs
