[package]
name = "minchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json", "tls"] }
serde = "1.0"
tokio-rusqlite = "0.5"
rusqlite = "0.30"
anyhow = "1.0"
rocket_anyhow = { path = "src/rocket_anyhow" }
rand = "0.8"